Replace SysGenCurrency and Currency types with BigDecimal
These classes were copied over from MAAT and were simple BigDecimal subclasses that only contained constructors. This was leading to lots of unnecessary mapping issues.